--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 c++;
                 if(wi>=19)
                 {
-                    document.getElementById('body').style.backgroundImage='url("https://media1.tenor.com/images/f6e18bfcd61c521688ae2895438ed2f5/tenor.gif?itemid=12766090")';
+                    document.getElementById('body').style.backgroundImage='url("win.gif")';
                     document.getElementById('time').style.width='300px';
                     document.getElementById('steps').style.width='200px';
                     document.getElementById('time').style.backgroundColor='yellow';
